edits from heckman 4/29

--- a/abc_treatmenteffects.tex
+++ b/abc_treatmenteffects.tex
@@ -85,7 +85,7 @@ Email: aziff@uchicago.edu                     &  \\
 \label{sec:introduction}
 \input{sections/1_introduction}	
 
-\section{Our Data}
+\section{Data}
 \label{sec:data}
 \input{sections/2_data}
 
