--- a/output/program-desc-abc-care.tex
+++ b/output/program-desc-abc-care.tex
@@ -1,17 +1,17 @@
 \begin{tabular}{l l}
 	\toprule
 Site & Chapel Hill, North Carolina \\
-Cohorts & 4 (\textbf{ABC}), 2 (\textbf{CARE}) \\
-$N$ & 58 treatment, 56 control (\textbf{ABC} \\
-	& 17 treatment, 23 control (\textbf{CARE}) \\
+Cohorts & 4 (ABC), 2 (CARE) \\
+$N$ & 58 treatment, 56 control (ABC) \\
+	& 17 treatment, 23 control (CARE) \\
 \midrule
 Eligibility & HRI $>$ 11 \\
 		& Biologically healthy \\
 \midrule
-Treatment years & 1972--1981 (\textbf{ABC}), 1977--1985 (\textbf{CARE}) \\
+Treatment years & 1972--1981 (ABC), 1977--1985 (CARE) \\
 Treatment duration & 5 years \\
 \midrule
-Home visits 	& 2.5--2.7	per month (\textbf{CARE})	\\
+Home visits 	& 2.5--2.7	per month (CARE)	\\
 Center care	& 50	weeks per year \\
 		 	& 30--45 hours per week  \\
 Other treatment components & Formula until 6 months\\
@@ -23,7 +23,7 @@ Other treatment components & Formula until 6 months\\
 					& Transportation to center \\
 Control-group incentives & Formula until 6 months \\
 				& Diapers until 6 months 	\\
-				& Health check-ups until 1 year (\textbf{ABC}, cohort 1) \\
+				& Health check-ups until 1 year (ABC, cohort 1) \\
 \midrule
 Adult-child ratio & 1:3--1:6 \\
 Teacher requirements & High school through masters \\
