--- a/sections/0_abstract.tex
+++ b/sections/0_abstract.tex
@@ -1,1 +1,1 @@
-\noindent This paper estimates the impacts across multiple life domains of an enriched early childhood program targeted toward disadvantaged children. Evaluated by the method of random assignment, treatments and controls were followed through age 34. There are multiple lifetime benefits of the program that differ sharply by gender. We document these differences and assess the impacts of the program on promoting or alleviating population differences in life outcomes by gender. Boys benefit more from high quality early center-based programs. For them, home care, even in disadvantaged environments, is more beneficial. This phenomenon is not found for girls. We investigate the sources of the differential impacts. Early childhood interventions differentially affect child-parent interactions depending on the gender of the child. \textbf{[Word Count: 118]}
+\noindent This paper estimates sharp gender differences in the life-cycle impacts across multiple life domains of an enriched early childhood program targeted toward disadvantaged children. Evaluated by the method of random assignment, treatments and controls were followed through age 34. We document these differences and assess the impacts of the program on promoting or alleviating population differences in life outcomes by gender. On many dimensions, boys benefit relatively more from high quality early center-based programs. For them, home care, even in disadvantaged environments, is more beneficial than lower quality center care. This phenomenon is not found for girls. We investigate the sources of the differential impacts. Early childhood interventions differentially affect child-parent interactions depending on the gender of the child. \textbf{[Word Count: 119]}
