--- a/sections/5_treatment-effects.tex
+++ b/sections/5_treatment-effects.tex
@@ -1,10 +1,10 @@
 \subsection{Estimated Treatment Effects}
 
-Tables~\ref{table:tescombinedmales} and \ref{table:tescombinedfemales} present the estimates of selected treatment effects for males and females respectively. The complete set of treatment effects are listed in Appendix~\ref{appendix:results}. Column (1) gives sample mean differences in outcomes between treatment and control groups. \textbf{[JJH: The full list is in the appendix?][Yes, the full list is in Appendix C. We have added reference to this.]} Column (2) adjusts the differences for attrition and controls for background variables. Both are estimates of the parameter defined in equation~\eqref{eq:effect}. Column (3) shows the mean difference between the full treatment-group and the control-group subjects who did not attend alternative preschools. Column (4) gives standard matching estimates for the parameter defined in equation~\eqref{eq:influenza}.\footnote{In Appendix~\ref{app:matching-is-fun}, we provide details on: (i) the kernel matching estimator that we use; (ii) the matching variables that we use; and (iii) a sensitivity analysis to these matching variables.} Column (5) gives mean differences between the full treatment-group and control-group children who attended alternatives. Column (6) gives matching estimates for the parameter of equation~\eqref{eq:smallpox}.
+Tables~\ref{table:tescombinedmales} and \ref{table:tescombinedfemales} present the estimates of selected treatment effects for males and females respectively. The complete set of treatment effects are listed in Appendix~\ref{appendix:results}. Column (1) gives sample mean differences in outcomes between treatment and control groups. Column (2) adjusts the differences for attrition and controls for background variables. Both are estimates of the parameter defined in equation~\eqref{eq:effect}. Column (3) shows the mean difference between the full treatment-group and the control-group subjects who did not attend alternative preschools. Column (4) gives standard matching estimates for the parameter defined in equation~\eqref{eq:influenza}.\footnote{In Appendix~\ref{app:matching-is-fun}, we provide details on: (i) the kernel matching estimator that we use; (ii) the matching variables that we use; and (iii) a sensitivity analysis to these matching variables.} Column (5) gives mean differences between the full treatment-group and control-group children who attended alternatives. Column (6) gives matching estimates for the parameter of equation~\eqref{eq:smallpox}.
 
 The results for females show that ABC/CARE has substantial effects on education when comparing outcomes of the treatment-group subjects to those from the next best alternative. High school graduation increases between 13 and 25 percentage points, depending on the estimate that we consider; college graduation increases 13 percentage points; and the average years of schooling increase between 2.1 and 1.8 years. Employment at age 30 increases between 13 and 8 percentage points. ABC/CARE has substantial impacts on human capital accumulation and employment. The results strengthen when we compare treatment with the option of staying at home.
 
-\textbf{[JJH: By category -- Report stepdown by blocks: health, earnings, crime, etc.][We report these in Appendix~\ref{appendix:results}. We added a summary below of the stepdown results.]}
+\textbf{[JJH: Let's be more precise: show by category. Put this in the main text.]}
 
 \begin{sidewaystable}[!htbp]
 \centering
@@ -39,11 +39,41 @@ $^*$For females, we do not report graduation from a four-years college because w
 
 The results for males are somewhat different from those for females. Treatment has substantial effects when compared to the next best alternative. The effects are positive for a variety of health indicators, including drug use and hypertension. The effects on employment and labor income are also substantial. The increase in employment at age 30 ranges from 11 to 19 percentage points. Labor income at age 30 increases between 19 and 24 thousand of 2014 USD after treatment. The effects strengthen when comparing treatment to alternative preschool. Separation from the mother and being placed in relatively low quality childcare centers have more deleterious consequences for males than for females.\footnote{This is consistent with the evidence in \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and \citet{Kottelenberg-Lehrer_2014_Gender-Effects}.}
 
-The results hold when using other definitions of control substitution (see Appendix~\ref{appendix:vsensitivity}). They remain statistically significant or are borderline statistically insignificant when computing two-tailed $p$-values (see Appendix~\ref{appendix:vsensitivity}). \textbf{[Stepdown summary here.]} When using stepdown $p$-values (see Appendix~\ref{appendix:results}), the health results remain statistically significant for males, when comparing to the full control group and when fixing to alternative preschool. The education results remain statistically significant for females, when comparing to the full control group and when fixing to staying at home.
+The results hold when using other definitions of control substitution (see Appendix~\ref{appendix:vsensitivity}). They remain statistically significant or are borderline statistically insignificant when computing two-tailed $p$-values (see Appendix~\ref{appendix:vsensitivity}). \textbf{[Stepdown summary here.]} When using stepdown $p$-values (see Appendix~\ref{appendix:results}), the health results remain statistically significant for males, when comparing to the full control group and when fixing to alternative preschool. The education results remain statistically significant for females, when comparing to the full control group and when fixing to staying at home. \textbf{[JJH: Report by block.]}
 
 The estimates contrasting the effects for females and males in (3) and (5) are not based on matching; the estimates in (4) and (6) are. For the matching estimates, we rely on observed, baseline characteristics. In Appendix~\ref{appendix:bvariables}, we explain our choice of these variables and we make a thorough analysis to conclude that there is little sensitivity to the choice of these variables.\footnote{We also present this sensitivity analysis changing the variables used to condition while estimating treatment effects and changing the variables used to construct the weights to account for attrition.}
 
+\textbf{[JJH: We need a test for equation of treatment effects across genders.]}
+
 \subsection{Estimated Combining Functions}
+
+We consider a total of 95 outcomes that we classify in Appendix~\ref{appendix:results}. Frequent measures of cognitive, social-emotional, and parenting skills were collected during the intervention and while the subjects were in school. The researchers collected information on the subjects' academics including grade retention and special education. The adult surveys (at ages 21 and 30) cover items related to employment, post-secondary education, health, criminal activity, and family structure. When the subjects were in their mid 30s, the researchers collected administrative crime data and data from a full medical survey.
+
+Given the large number of available variables from the numerous follow-ups, summarizing all treatment effects can overwhelm the reader. In a companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished} aggregate the treatment effects by conducting a cost/benefit analysis. They show that the benefits from ABC/CARE are largely driven by its effects on males. The benefit/cost ratio is 10.19 for males and 2.61 for females. In this paper, we report treatment effects by category and the proportion of statistically significant effects. We use combining functions, which count the number of positive (and significant) treatment effects by gender. They indicate that females benefit more from the program than do males.
+
+We find strong effects on education and employment for females with high school graduation increasing between 13 and 25 percent and employment increasing between 8 and 13 percentage points.\footnote{The range arrises from the different estimates.} Although the treatment did not increase education for males as strongly as for females, it increased employment between 11 to 19 percentage points and labor income between 19 and 24 thousand of 2014 US dollars.\footnote{Income, employment, and education were measured when the subjects were 30 years.}  For females in comparison to alternative preschool, 40\% of the education outcomes and 20\% of the employment outcomes are positive and significant. These increase to 80\% and 100\% when comparing to staying at home. The treatment advantage for males is only seen when compared to those males who attended alternative preschool, with none of the education or employment outcomes being significant and positive when compared to staying at home. 
+
+We broaden the discussion of results to the full set of outcomes by presenting the estimates of the counts of positive treatment effects. To perform inference on these estimates, we test the hypothesis of whether the proportions are equal to 50\%. As Figure~\ref{fig:intro-cfunctions} shows, although the proportions for both genders are significantly greater than 50\%, the proportion is higher for females. When considering the proportion of outcomes that are both positive and significant at the 10\% level, we test the hypothesis whether the proportions are equal to 10\%.\footnote{Our inference accounts for the dependence across outcomes, as we explain in Section~\ref{sec:combining-functions}.} A similar pattern holds for this test as well, although the proportions are smaller. Across outcomes, the effects are stronger for males fixing the control group to alternate preschool, but stronger for females when fixing the control group to staying at home. This pattern holds in the individual treatment effects, the combining functions, and the results from \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.
+
+\begin{figure}[!htbp]
+\centering
+\caption{Proportion of Outcomes that are Positively Impacted}
+\label{fig:intro-cfunctions}
+	\begin{subfigure}[h]{0.7\textwidth}
+	\centering
+	\caption{Treatment vs. Next Best} \label{fig:ppositive10}
+		\includegraphics[width=\textwidth]{output/itt_noctrl_all.eps}
+\end{subfigure}
+	\begin{subfigure}[h]{0.7\textwidth}
+	\centering
+	\caption{Treatment vs. Next Best, Significant at 10\% Level} \label{fig:ppositive10}
+		\includegraphics[width=\textwidth]{output/itt_noctrl_all_sig10.eps}
+\end{subfigure}
+\footnotesize \justify
+Note: Panel (a) percentage of outcomes displaying a positive treatment effect, comparing treatment to next best. Panel (b) percentage of outcomes displaying a positive and statistically significant treatment effect (10\% significance level).
+\end{figure}
+
+This difference in the results depending on the counterfactual, as well as the gender differences in the treatment effects, drives our discussion of the interaction between the treatment, the family inputs, and any potential alternate center-based care. The explanation that males are more fragile than females early in life is consistent with the early differences favoring females.\footnote{\citet{Kottelenberg-Lehrer_2014_Gender-Effects,Baker_Gruber_Milligan_2015_Noncog_Defects, Schore_2017_IMHJ}.} Building on this, we explore how these early-life differences evolve for specific outcomes that are central to the analysis of  \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, such as crime and income. We find that the treatment narrows or reverses the male-female gap for many outcomes, including education and employment. Treatment widens the male-female gap for health.
 
 We next report estimates of the proportion of beneficial effects by outcome category and overall.\footnote{We consider a total of 95 outcomes that we classify in Appendix~\ref{appendix:results}. These are the outcomes that most clearly relate to the treatment offered by the program.} The analysis is based on treatment effect \eqref{eq:effect}. Figure~\ref{fig:ppositive} displays the results from this analysis: ABC/CARE positively impacted a large percentage of the outcomes. We show the counts for treatment compared to the next best alternative chosen by parents in Figure~\ref{fig:ppositivenb}. Proportionately more outcomes are beneficial for females, but the proportions are high for both groups and well above the benchmark of 1/2. In Tables~\ref{table:abccare_rslt_pooled_counts} to \ref{table:abccare_rslt_female_counts_n10a10} of Appendix~\ref{appendix:results}, we document a large and precisely determined fraction of beneficial treatment effects well above 1/2 for both genders for categories of outcomes spanning the life cycle through the mid 30's.
 
@@ -97,3 +127,5 @@ Finally, we present the estimates of the combining functions by outcome category
 \scriptsize \justify
 Note: Panel (a) percentage of outcomes displaying a positive treatment effect, comparing treatment to next best. Panel (b) percentage of outcomes displaying a positive and statistically significant treatment effect (10\% significance level). Panel (c) displays the percentage of outcomes with a positive treatment effect, comparing treatment to staying at home. Panel (d) displays the percentage of outcomes with a positive treatment effect, comparing treatment to alternative childcare arrangements. Standard errors are based on the empirical bootstrap distribution. For Panel (b) we perform a ``double bootstrap'' procedure to first determine significant treatment effects at $10\%$ level and then calculate the standard error of the count.\\
 \end{figure}
+
+\textbf{[JJH: Report estimates here.]}
